# sex-worker-safety-dao-toolkit

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Justfile  LICENSE  README.md  docker-compose.choreo.yml  docker-compose.yml  go.work
.github/workflows/: ci.yml
docker/: Dockerfile.analytics  Dockerfile.attestation  Dockerfile.checkin-dao  Dockerfile.frontend  Dockerfile.gateway
docs/: CONTRIBUTING.md
frontend/: .env.local.example  next.config.js  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: AttestationForm.tsx  CheckInWidget.tsx  EmergencyButton.tsx  Layout.tsx  Navbar.tsx  ProposalCard.tsx  ReportCard.tsx  Sidebar.tsx  StatsCard.tsx  VoteButton.tsx
frontend/src/lib/: api.ts  auth.ts  utils.ts
frontend/src/types/: index.ts
migrations/: 001_initial_schema.sql
services/analytics/: Project.toml  run.jl
services/analytics/src/: AnalyticsService.jl  analytics.jl  config.jl  main.jl  qdrant.jl  routes.jl  similarity.jl
services/attestation/: Cargo.toml
services/attestation/migrations/: 20240101000000_create_attestations.sql
services/attestation/src/: config.rs  crypto.rs  db.rs  handlers.rs  lib.rs  main.rs  models.rs  proof.rs
services/checkin-dao/: go.mod  go.sum  main.go
services/checkin-dao/config/: config.go
services/checkin-dao/db/: migrations.go  postgres.go
services/checkin-dao/handlers/: auth.go  checkin.go  dao.go  emergency.go  registry.go
services/checkin-dao/middleware/: middleware.go
services/checkin-dao/models/: models.go
services/checkin-dao/routes/: routes.go
services/gateway/: Cargo.toml
services/gateway/src/: auth.rs  config.rs  crypto.rs  main.rs  middleware.rs  proxy.rs  ratelimit.rs  server.rs
(+13 files in other folders)
