[package]
name = "api-gateway"
version.workspace = true
edition.workspace = true

[dependencies]
pingora = { git = "https://github.com/cloudflare/pingora", features = ["lb"] }
axum = "0.7"
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "compression-gzip", "trace"] }
hyper = { version = "1", features = ["full"] }
http = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
jsonwebtoken = "9"
governor = "0.6"
rustls = "0.23"
tokio-rustls = "0.26"
acme-lib = "0.9"
aes-gcm = "0.10"
chacha20poly1305 = "0.10"
rand = "0.8"
reqwest = { version = "0.12", features = ["json"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
uuid = { version = "1", features = ["v4"] }
